@@ -24,6 +24,8 @@
 
 
 Search::Search() {
+  maxTime = 60;  // 1 minute
+  minDepth = 3;  // If search depth is 9, then a minDepth of 3 would allow 7 iterations altogether
 }
 
 
@@ -37,20 +39,34 @@ void Search::setBoard(brd::Board* newBoard) {
 }
 
 
+void Search::initTimer(void) {
+  clock.resetTimer();
+}
+
+
 double Search::alphaBeta(brd::Board* vBoard, double alpha, double beta, int depth = 5) {
+  double infinity = vBoard->getPieceValue(INFINITY);
+  double score = 0, bestScore = -infinity;
+  int leftOuts = 0;
+  brd::Board newVBoard;
+
+  // If we have reached the 'leaves' of the game tree, return evaluation
   if (depth <= 0) {
     Eval AI;
     return AI.doEval(vBoard);
   }
   
-  double score = 0;
-  double bestScore = -(vBoard->getPieceValue(INFINITY));
-  int leftOuts = 0;
-  brd::Board newVBoard;
+  // Generate all possible moves
   vBoard->genMoves();
-
+  
+  // Iterate through all generated moves
   for (unsigned int i = 0; i < vBoard->getMoves().size() && bestScore < beta; i++) {
-    // Do not allow illegal moves, such as those that lead right into check mate, etc.
+
+    // Use timer
+    if (clock.timeElapsed() >= maxTime)
+      return bestScore;
+    
+    // Do not allow illegal moves, such as those that would lead us right into check mate
     if (!vBoard->isValidMove(vBoard->getArrayMove(i))) {
       leftOuts++;
       continue;
@@ -68,16 +84,26 @@ double Search::alphaBeta(brd::Board* vBoard, double alpha, double beta, int dept
     if (bestScore > alpha)
       alpha = bestScore;
 
-    score = -alphaBeta(&newVBoard, -beta, -alpha, depth - 1);
+    score = -alphaBeta(&newVBoard, -alpha-1, -alpha, depth - 1);
+    
+
+    // score = -alphaBeta(&newVBoard, -beta, -alpha, depth - 1);
+
+    if (score > alpha && score < beta)
+      score = -alphaBeta(&newVBoard, -beta, -alpha, depth-1);
 
     if (score > bestScore) {
       bestScore = score;
       vBoard->setBestMove(vBoard->getArrayMove(i));
 
 #ifdef DEBUG
-      cout << vBoard->getBestMove().source().x << ":" << vBoard->getBestMove().source().y << " - " <<
+      cout << "Color: " << vBoard->getTurn() << " " << vBoard->getBestMove().source().x << ":" << vBoard->getBestMove().source().y << "-" <<
 	vBoard->getBestMove().dest().x << ":" << vBoard->getBestMove().dest().y << endl;
 #endif
+    }
+
+    if (bestScore >= beta) { // Cut off
+      vBoard->setBestMove(vBoard->getArrayMove(i));
     }
   }
   
@@ -116,12 +142,16 @@ double Search::miniMax(brd::Board* vBoard, int depth = 3) {
       newVBoard.setTurn(BLACK);
     else
       newVBoard.setTurn(WHITE);
-    
+
     score = -miniMax(&newVBoard, depth - 1);
     
     if (score > bestScore) {
       bestScore = score;
       vBoard->setBestMove(vBoard->getArrayMove(i));
+
+      // Use timer
+      if ( (clock.timeElapsed() >= maxTime) && (vBoard->getBestMove().source().x != 0 && vBoard->getBestMove().dest().x != 0) )
+	return bestScore;
     }
     
     vBoard->undoMove();
@@ -132,4 +162,14 @@ double Search::miniMax(brd::Board* vBoard, int depth = 3) {
     vBoard->setCheckmate(vBoard->getTurn());
 
   return bestScore;
+}
+
+
+void Search::setMaxTime(double time) {
+  maxTime = time;
+}
+
+
+void Search::setMinDepth(int depth) {
+  minDepth = depth;
 }
